# stm32_w5500_spi

./: CMakeLists.txt  Makefile  main.c  script.ld
asm/: init.s
inc/: w5500.h  wizchip_conf.h
src/: startup.c  wizchip_conf.c
